--- a/html/contact.html
+++ b/html/contact.html
@@ -194,6 +194,6 @@
             </div>
         </div>
     </footer>
-    <script src="script.js"></script>
 </body>
+<script src="..//script.js"></script>
 </html>
