--- a/html/home.html
+++ b/html/home.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/a041cc045c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="..//css/headerstyle.css">
-    <link rel="stylesheet" href="..//css/overviewstyle.css">
-    <link rel="stylesheet" href="..//css/featuresstyle.css">
-    <link rel="stylesheet" href="../css/Howstyle.css">
-    <link rel="stylesheet" href="..//css/app-featuresstyle.css">
-    <link rel="stylesheet" href="../css/feedbackstyle.css">
-    <link rel="stylesheet" href="..//css/faqstyle.css">
-    <link rel="stylesheet" href="..//css/subscribestyle.css">
-    <link rel="stylesheet" href="..//css/footerstyle.css">
+    <link rel="stylesheet" href="..//css/home/headerstyle.css">
+    <link rel="stylesheet" href="..//css/home/overviewstyle.css">
+    <link rel="stylesheet" href="..//css/home/featuresstyle.css">
+    <link rel="stylesheet" href="../css/home/Howstyle.css">
+    <link rel="stylesheet" href="..//css/home/app-featuresstyle.css">
+    <link rel="stylesheet" href="../css/home/feedbackstyle.css">
+    <link rel="stylesheet" href="..//css/home/faqstyle.css">
+    <link rel="stylesheet" href="..//css/home/subscribestyle.css">
+    <link rel="stylesheet" href="..//css/home/footerstyle.css">
     <title>Home</title>
 </head>
 <body>
@@ -352,8 +352,8 @@
                 <h2>Subscribe to our newsletter to stay informed about latest updates</h2>
             </div>
             <div id="search">
-                <input type="text" placeholder="🖂 Your Email">
-                <button>Subscribe</button>
+                <input type="email" id="emailInput" placeholder="🖂 Your Email">
+                <button onclick="subscribe()">Subscribe</button>
             </div>
         </div>
     </div>
@@ -386,4 +386,4 @@
     </div>
 </body>
 </html>
-<script src="..//script.js"></script>
+<script src="..//js/home.js"></script>
