--- a/html/error.html
+++ b/html/error.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/a041cc045c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="..//css/headerstyle.css">
-    <link rel="stylesheet" href="..//css/errorstyle.css">
+    <link rel="stylesheet" href="..//css/home/headerstyle.css">
+    <link rel="stylesheet" href="..//css/error/errorstyle.css">
     <title>Error</title>
 </head>
 <body>
@@ -51,4 +51,4 @@
     </footer>
 </body>
 </html>
-<script src="..//script.js"></script>
+<script src="..//js/error.js"></script>
